# Modern-Chess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  CMakeListsGI.txt  Game.cpp  Player.cpp  Player.h  README.md  board.txt  main.cpp
.github/: CMakeLists.txt
.github/workflows/: main.yml
headers/: Board.h  ChessExceptions.h  Game.h  Piece.h  PieceStats.h  Player.h  Textures.h
src/: Board.cpp  ChessExceptions.cpp  Game.cpp  Piece.cpp  PieceStats.cpp  Player.cpp  Textures.cpp
